# taipei-cafe-recommender

./: .gitignore  Dockerfile  LICENSE  README.md  main.py
0.airflow/: airflow_01_data_extraction.py  airflow_02_data_transformation.py  airflow_03_ai_interaction_log.py  cafe_data_pipeline.py
1. crawler/: Dockerfile  requirements.txt
1.crawler/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
1.crawler/src/: main.py
1.crawler/src/scraper/: 01_path_b_scanner.py  02_official_tag_scraper.py  03_review_dynamic_scraper.py  04_ifoodie_review_scraper.py  ifoodie_review_scraper.py  merger.py  official_tag_retry.py  official_tag_scraper.py  path_b_scanner.py  review_dynamic_scraper.py  review_scraper_original.py  supertaste_store.py
1a.review_crawler/: Dockerfile  review_crawler.py
2.transformer/: .dockerignore  .gitignore  Dockerfile  cleaning_pipeline.py  main.py  not_use_main.py  read.md  regex_cleaned.py  requirements.txt  stage01_regex_cleaned.py  stage02_cleaning_name.py  store_raw.py  store_to_DB.py  store_to_db.py
3.connector/: importer.py
4.LINE_API/: requirements.txt  user_feedback.json  user_history.json  user_last_location.json
4.ai_interaction_log/: Dockerfile  ai_interaction_log.py  requirements.txt
4.line_api_app/: .gitignore  Dockerfile  data_client.py  main.py
4.mongodb_serviceloop/: Dockerfile  constants.py  database.py  locations.py  main.py  requirements.txt  utils.py
testpy_for_02/: A_StageA_Processor.py  tag_config.py  (+5 more)
x.for_embedding_test/: .gitignore  embedding.py  fake_data.py  model.py  pyproject.toml
(+42 files in other folders)
