[project]
name = "for-test"
version = "0.1.0"
description = ""
authors = [
    {name = "carterwuuu32",email = "a84682579@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=2.17.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "google-genai (>=1.62.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
